# opencv_soft

./: .gitignore  CMakeLists.txt  README.md  main.cpp
graphics/: application.cpp  application.h
